--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.3.1",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.2",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1",
